tests/errors/kind_star_of_logical.f90
program kind_star_of_logical
    implicit none
    logical(*) a
end program
